<resources>
    <string name="app_name" translatable="false">Neo Backup</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backupConfirmation">Backup?</string>
    <string name="restoreConfirmation">Restore?</string>
    <string name="handleApk">APK</string>
    <string name="handleData">Data</string>
    <string name="handleBoth">Both</string>
    <string name="radio_all">All apps</string>
    <string name="radio_user">User Apps</string>
    <string name="radio_system">System Apps</string>
    <string name="radio_both">APK and Data</string>
    <string name="radio_apk">APK</string>
    <string name="radio_data">Data</string>
    <string name="radio_special">Special Backups</string>
    <string name="radio_updated">Updated</string>
    <string name="radio_externaldata">External Data</string>
    <string name="radio_deviceprotecteddata">Device Protected Data</string>
    <string name="radio_obbdata">OBB Data</string>
    <string name="radio_mediadata">Media Data</string>
    <string name="de_selectAll">De/select all</string>
    <string name="refresh">Refresh</string>
    <string name="batchbackup">Batch backup</string>
    <string name="batchrestore">Batch restore</string>
    <string name="search">Search</string>
    <string name="searchHint">Search for apps</string>
    <string name="deleteBackup">Delete backup</string>
    <string name="uninstall">Uninstall app</string>
    <string name="uninstallProgress">Uninstalling…</string>
    <string name="showOnlySystem">Only system apps</string>
    <string name="showOnlyUser">Only user apps</string>
    <string name="showNotBackedup">Apps without backup</string>
    <string name="showNotInstalled">Not installed apps</string>
    <string name="showNewAndUpdated">New and updated apps</string>
    <string name="showOldBackups">Old backups</string>
    <string name="showSplitAPKs">Split-APK</string>
    <string name="showOnlyApkBackedUp">Apps with only APK backed up</string>
    <string name="showOnlyDataBackedUp">Apps with only data backed up</string>
    <string name="sortByLabel">Sort by label</string>
    <string name="sortByPackageName">Sort by packagename</string>
    <string name="sort">Sort and filter</string>
    <string name="uninstallDialogMessage">Uninstall this app?</string>
    <string name="deleteBackupDialogMessage">Delete backup files?</string>
    <string name="restoreDataWithoutApkError">Cannot restore data without restoring the APK, the package is not installed.</string>
    <string name="utilboxCheck" translatable="false">Checking for BusyBox/Toybox…</string>
    <string name="noSu">Couldn\'t get superuser permissions</string>
    <string name="mkfileError">Couldn\'t create</string>
    <string name="fallbackToDefault">Fall back to default</string>
    <string name="backupFolderError">Please set the correct path in the preferences and ensure it exists or is createable</string>
    <string name="shellReturnSuccess">Success</string>
    <string name="shellReturnError">Error</string>
    <string name="backupProgress">Backing up…</string>
    <string name="backupSuccess">Backup complete</string>
    <string name="backupFailure">Error on backup</string>
    <string name="restoreProgress">Restoring…</string>
    <string name="restoreSuccess">Restore complete</string>
    <string name="restoreFailure">Error on restore</string>
    <string name="batchSuccess">Operation complete</string>
    <string name="batchFailure">Complete with errors</string>
    <string name="uninstallSuccess">Uninstall complete</string>
    <string name="uninstallFailure">Error on uninstall</string>
    <string name="errorDialogTitle">Errors occurred</string>
    <string name="customListTitle">Custom list</string>
    <string name="notInstalledModeDataWarning">App cannot be restored from a backup without APK</string>
    <string name="shareTitle">Share</string>
    <string name="batchDeleteMessage">Deleting backups…</string>
    <string name="batchDeleteNotificationTitle">Delete backups</string>
    <string name="batchDeleteBackupsDeleted">Backups deleted:</string>
    <string name="batchDeleteNothingToDelete">No backups to delete</string>
    <string name="enablePackage">Enable app</string>
    <string name="enablePackageTitle">Enable app for users</string>
    <string name="disablePackage">Disable app</string>
    <string name="disablePackageTitle">Disable app for users</string>
    <string name="error_pmDataIncompleteException_dataRestoreFailed">App data has not been restored.</string>
    <string name="prefs_title">Preferences</string>
    <string name="prefs_user">User preferences</string>
    <string name="prefs_user_short">Personal</string>
    <string name="prefs_service">Service preferences</string>
    <string name="prefs_service_short">Service</string>
    <string name="prefs_advanced">Advanced preferences</string>
    <string name="prefs_advanced_short">Advanced</string>
    <string name="prefs_tools">Tools</string>
    <string name="prefs_tools_short">Tools</string>
    <string name="prefs_theme">Theme</string>
    <string name="prefs_theme_light">Light</string>
    <string name="prefs_theme_dark">Dark</string>
    <string name="prefs_theme_system">System\'s theme</string>
    <string name="prefs_theme_system_black">System\'s theme (Black)</string>
    <string name="prefs_theme_dynamic">Dynamic theme</string>
    <string name="prefs_theme_dynamic_light">Light with dynamic colors</string>
    <string name="prefs_theme_dynamic_dark">Dark with dynamic colors</string>
    <string name="prefs_theme_dynamic_black">Black with dynamic colors</string>
    <string name="prefs_theme_black">Black theme</string>
    <string name="prefs_theme_black_summary">Enforces black background when on dark theme</string>
    <string name="prefs_languages">Language</string>
    <string name="prefs_language_system">System default</string>
    <string name="prefs_pathbackupfolder">Backup folder</string>
    <string name="prefs_loadingtoasts">Loading toasts</string>
    <string name="prefs_loadingtoasts_summary">Show toasts while the list is being loaded</string>
    <string name="prefs_devicelock">Device lock</string>
    <string name="prefs_devicelock_summary">Secure the app with device credentials</string>
    <string name="prefs_biometriclock">Biometric lock</string>
    <string name="prefs_biometriclock_summary">Secure the app with the device\'s biometric lock (e.g. fingerprint, face unlock)</string>
    <string name="prefs_multilineinfochips">Multi-line info chips</string>
    <string name="prefs_multilineinfochips_summary">Allow info chips in app sheet to span over multi-lines.</string>
    <string name="prefs_newandupdatednotification">Show new and updated notification</string>
    <string name="prefs_newandupdatednotification_summary">Show new user apps beside the updated apps in the notification bar in home page.</string>
    <string name="prefs_singularbackuprestore">Singular backup restore</string>
    <string name="prefs_singularbackuprestore_summary">Use alternative restore item layout that allows choosing specific backups for restore.</string>
    <string name="prefs_squeezenavtext">Squeeze navigation item\'s text</string>
    <string name="prefs_squeezenavtext_summary">Allow text under navigation bar items to be resized to fit the available width.</string>
    <string name="prefs_altnavbaritem">Use alternative navigation bar item</string>
    <string name="prefs_altnavbaritem_summary">Use the alternative/old navigation bar item layout, which shows label of unselected items.</string>
    <string name="prefs_laserbackground">Show animated laser in background</string>
    <string name="prefs_laserbackground_summary">Use animated colored lights as background when loading/busy.</string>
    <string name="prefs_rememberfiltering">Remember sort and filter</string>
    <string name="prefs_rememberfiltering_summary">Saves the chosen sorting and filtering method. Only those marked by a checkbox in the menu are considered.</string>
    <string name="prefs_oldbackups">Filter backups by age</string>
    <string name="prefs_oldbackups_summary">Filter backups older than value in days. Used with the filter \'Show old backups\'.</string>
    <string name="prefs_encryption">Encryption</string>
    <string name="prefs_encryption_summary">Enable to encrypt data backups</string>
    <string name="prefs_password">Encryption password</string>
    <string name="prefs_password_summary">Also used for decryption on restore</string>
    <string name="prefs_passwordconfirmation">Encryption password confirmation</string>
    <string name="prefs_password_match_true">The passwords match</string>
    <string name="prefs_password_match_false">The passwords don\'t match</string>
    <string name="prefs_enablespecial">Enable special backups</string>
    <string name="prefs_enablespecial_summary">Still needs intensive testing, try knowing the danger that it can cause boot loops. Feedback is always welcome.</string>
    <string name="prefs_excludecache">Exclude app\'s cache</string>
    <string name="prefs_excludecache_summary">Exclude app\'s cache from data backup</string>
    <string name="prefs_externaldata">Back up external data</string>
    <string name="prefs_externaldata_summary">Backs up data that is placed on the external storage (e.g. /storage/emulated/0/Android/data/)</string>
    <string name="prefs_obbdata">Back up obb files</string>
    <string name="prefs_deviceprotecteddata">Back up device-protected data</string>
    <string name="prefs_deviceprotecteddata_summary">Backs up data that is placed in data/user_de</string>
    <string name="prefs_numBackupRevisions">Number of backup revisions</string>
    <string name="prefs_numBackupRevisions_summary">The oldest revision will be deleted upon creation of a new backup if the number is exceeded. Set it to zero to keep all revisions.</string>
    <string name="prefs_acquirewakelock">Prevent sleep</string>
    <string name="prefs_acquirewakelock_summary">Acquire a wakelock during batch operations to prevent sleep. Speeds up backups and restorations considerably, but consumes more energy.</string>
    <string name="prefs_stopcont">STOP-CONT pre- and postprocessing of apps on backup/restore</string>
    <string name="prefs_stopcont_summary">Experts only: This can help, if the app is changing files during backup and the backup fails.</string>
    <string name="prefs_copyselfapk">Copy own APK</string>
    <string name="prefs_copyselfapk_summary">Place a copy of Neo Backup in the top level of the backup folder</string>
    <string name="ignore_battery_optimization_title">Battery Optimization</string>
    <string name="grant_usage_access_title">Grant Usage Access</string>
    <string name="storage_access">Storage Access</string>
    <string name="intro_permission_storage">The app uses read/write permission of storage to be able to access the external storage and provide the possibility for the backup of external data/obb of other apps.</string>
    <string name="intro_permission_storage_location">The app needs a backup location to store the backups. The app may need a few gigabytes of storage for a full backup and is querying the filesystem a lot. Please keep that in mind when choosing network based storage locations.</string>
    <string name="intro_permission_usageaccess">The app needs this permission to be able to check the stats and sizes of data and cache of your apps.</string>
    <string name="intro_permission_batteryoptimization">The app can face some problems doing scheduled backups on some ROMs that adopt an aggressive battery optimizations e.g. MIUI, but even on vanilla AOSP such a problem can happen.</string>
    <string name="intro_permission_storage_location_warning">Don\'t pick the main storage directory or Downloads folder, create a folder only for your backups. More on this in the FAQ</string>
</resources>