<?xml version="1.0" encoding="utf-8"?><!--
 ~ OAndBackupX: open-source apps backup and restore app.
 ~ Copyright (C) 2020  Antonios Hazim
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU Affero General Public License as
 ~ published by the Free Software Foundation, either version 3 of the
 ~ License, or (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU Affero General Public License for more details.
 ~
 ~ You should have received a copy of the GNU Affero General Public License
 ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.ListPreference
        android:defaultValue="system"
        android:entries="@array/themeEntries"
        android:entryValues="@array/themeEntryValues"
        android:key="themes"
        android:title="@string/prefs_theme"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.ListPreference
        android:defaultValue="system"
        android:entries="@array/languageEntries"
        android:entryValues="@array/languageEntryValues"
        android:key="languages"
        android:title="@string/prefs_languages"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <androidx.preference.Preference
        android:key="pathBackupFolder"
        android:title="@string/prefs_pathbackupfolder"
        app:iconSpaceReserved="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="biometricLock"
        android:summary="@string/prefs_biometriclock_summary"
        android:title="@string/prefs_biometriclock"
        app:iconSpaceReserved="false" />

    <androidx.preference.EditTextPreference
        android:defaultValue="7"
        android:inputType="number"
        android:key="oldBackups"
        android:summary="@string/prefs_oldbackups_summary"
        android:title="@string/prefs_oldbackups"
        app:iconSpaceReserved="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="rememberFiltering"
        android:summary="@string/prefs_rememberfiltering_summary"
        android:title="@string/prefs_rememberfiltering"
        app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
