<?xml version="1.0" encoding="utf-8"?><!--
 ~ OAndBackupX: open-source apps backup and restore app.
 ~ Copyright (C) 2020  Antonios Hazim
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU Affero General Public License as
 ~ published by the Free Software Foundation, either version 3 of the
 ~ License, or (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU Affero General Public License for more details.
 ~
 ~ You should have received a copy of the GNU Affero General Public License
 ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="copySelfApk"
        android:summary="@string/prefs_copyselfapk_summary"
        android:title="@string/prefs_copyselfapk"
        app:iconSpaceReserved="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="acquireWakelock"
        android:summary="@string/prefs_acquirewakelock_summary"
        android:title="@string/prefs_acquirewakelock"
        app:iconSpaceReserved="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="enableSpecialBackups"
        android:title="@string/prefs_enableSpecialBackups"
        app:iconSpaceReserved="false" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="killBeforeAction"
        android:summary="@string/prefs_stopcont_summary"
        android:title="@string/prefs_stopcont"
        app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
