<?xml version="1.0" encoding="utf-8"?><!--
 ~ OAndBackupX: open-source apps backup and restore app.
 ~ Copyright (C) 2020  Antonios Hazim
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU Affero General Public License as
 ~ published by the Free Software Foundation, either version 3 of the
 ~ License, or (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU Affero General Public License for more details.
 ~
 ~ You should have received a copy of the GNU Affero General Public License
 ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:fragment="com.machiav3lli.backup.fragments.PrefsUserFragment"
        app:icon="@drawable/ic_user_24"
        app:layout="@layout/item_prefs_x"
        app:title="@string/prefs_user" />

    <Preference
        android:fragment="com.machiav3lli.backup.fragments.PrefsServiceFragment"
        app:icon="@drawable/ic_service_24"
        app:layout="@layout/item_prefs_x"
        app:title="@string/prefs_service" />

    <Preference
        android:fragment="com.machiav3lli.backup.fragments.PrefsAdvancedFragment"
        app:icon="@drawable/ic_advanced_24"
        app:layout="@layout/item_prefs_x"
        app:title="@string/prefs_advanced" />

    <Preference
        android:fragment="com.machiav3lli.backup.fragments.PrefsToolsFragment"
        app:icon="@drawable/ic_tools_24"
        app:layout="@layout/item_prefs_x"
        app:title="@string/prefs_tools" />
</androidx.preference.PreferenceScreen>
